<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/learning"
            android:icon="@drawable/learning_selected"
            android:title="@string/learning" />
        <item
            android:id="@+id/training"
            android:icon="@drawable/training"
            android:title="@string/training" />
        <item
            android:id="@+id/exam"
            android:icon="@drawable/exam"
            android:title="@string/exam"

            />
        <item
            android:id="@+id/statistics"
            android:icon="@drawable/statistics"
            android:title="@string/statistics" />

        <item
            android:id="@+id/bookmark"
            android:icon="@drawable/bookmark"
            android:title="@string/bookmark" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/add_friends"
            android:icon="@drawable/add_friends"
            android:title="@string/add_friends" />

        <item
            android:id="@+id/write_us"
            android:icon="@drawable/write_us"
            android:title="@string/write_us" />
        <item
            android:id="@+id/exit"
            android:icon="@drawable/exit"
            android:title="@string/exit" />

    </group>


</menu>
