<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/settings_avatar"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/photo_round"/>

        <ImageView
            android:id="@+id/settings_cam"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="42dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/settings_avatar"
            android:layout_alignTop="@id/settings_avatar"
            android:src="@drawable/cam"/>

        <TextView
            android:id="@+id/settings_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="24dp"
            android:layout_below="@id/settings_avatar"
            android:text="@string/full_name_holder"
            android:textSize="16sp"
            android:textColor="@color/colorBlackText">
        </TextView>

        <EditText
            android:id="@+id/settings_new_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:layout_below="@id/settings_full_name"
            android:hint="@string/new_name_holder"
            android:textSize="14sp"
            android:textColor="@color/colorSettingsCommonText">
        </EditText>

        <TextView
            android:id="@+id/settings_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="24dp"
            android:layout_below="@id/settings_new_name"
            android:text="@string/email_holder"
            android:textSize="16sp"
            android:textColor="@color/colorBlackText">
        </TextView>

        <EditText
            android:id="@+id/settings_new_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:layout_below="@id/settings_email"
            android:hint="@string/new_email_holder"
            android:textSize="14sp"
            android:textColor="@color/colorSettingsCommonText">
        </EditText>

        <TextView
            android:id="@+id/settings_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="24dp"
            android:layout_below="@id/settings_new_email"
            android:text="@string/password_holder"
            android:textSize="16sp"
            android:textColor="@color/colorBlackText">
        </TextView>

        <EditText
            android:id="@+id/settings_new_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:layout_below="@id/settings_password"
            android:hint="@string/new_password_holder"
            android:textSize="14sp"
            android:textColor="@color/colorSettingsCommonText">
        </EditText>

        <Switch
            android:id="@+id/settings_reset_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="24dp"
            android:layout_below="@id/settings_new_password"
            android:text="@string/settings_reset_text"
            android:textSize="16sp"
            android:textColor="@color/colorBlackText" />

        <Button
            android:id="@+id/settings_btn_save"
            android:layout_width="124dp"
            android:layout_height="40dp"
            android:background="@drawable/element_background_button_skip"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/settings_reset_switch"
            android:text="@string/btn_save_settings_text"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </RelativeLayout>
</ScrollView>