<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/totals_confetti"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/confetti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totals_congratulation_text"
        android:layout_width="340dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/totals_text_congratulation"
        android:textAlignment="center"
        android:textColor="@color/colorBlackText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totals_confetti" />

    <TextView
        android:id="@+id/totals_result_text"
        android:layout_width="340dp"
        android:layout_height="24dp"
        android:layout_marginTop="56dp"
        android:text="@string/totals_text_result"
        android:textAlignment="center"
        android:textColor="@color/colorBlackText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totals_congratulation_text" />

    <TextView
        android:id="@+id/totals_text"
        android:layout_width="340dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/totals_text"
        android:textAlignment="center"
        android:textColor="@color/colorBlackText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totals_result_text" />

    <Button
        android:id="@+id/totals_button_repeat"
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/element_background_button_skip"
        android:gravity="center"
        android:text="@string/totals_btn_repeat_text"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totals_text" />

    <Button
        android:id="@+id/totals_button_home"
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/element_background_button_skip"
        android:gravity="center"
        android:text="@string/totals_btn_home_text"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totals_button_repeat" />

</androidx.constraintlayout.widget.ConstraintLayout>