<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="36dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="12dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/photo_round" />


    <TextView
        android:id="@+id/name_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_centerVertical="true"
        android:layout_marginLeft="11dp"
        android:layout_toRightOf="@id/photo"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/name_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorBlackText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/nav_header_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_id"
        android:layout_marginLeft="11dp"
        android:layout_toRightOf="@id/photo"
        android:paddingTop="8dp"
        android:text="@string/nav_header_subtitle"
        android:textSize="12sp" />

</RelativeLayout>
