<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.main_menu_fragment.MainMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="28dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_start_learning"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rectangle"
            android:text="@string/btn_start_learning_text"
            android:textColor="@color/mainMenu_btn_text"
            android:textAlignment="center"
            android:drawableStart="@drawable/agenda"
            app:layout_constraintBottom_toTopOf="@+id/btn_start_training"
            tools:layout_editor_absoluteX="28dp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/btn_start_training"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rectangle"
            android:text="@string/btn_start_training_text"
            android:textColor="@color/mainMenu_btn_text"
            android:textAlignment="center"
            android:drawableStart="@drawable/strong"
            app:layout_constraintBottom_toTopOf="@+id/btn_start_exam"
            tools:layout_editor_absoluteX="28dp" />

        <Button
            android:id="@+id/btn_start_exam"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:background="@drawable/rectangle"
            android:text="@string/btn_start_exam_text"
            android:textAlignment="center"
            android:textColor="@color/mainMenu_btn_text"
            android:drawableStart="@drawable/gym"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="28dp" />

        <Button
            android:id="@+id/btn_statistic"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle"
            android:text="@string/btn_statistic_text"
            android:textAlignment="center"
            android:textColor="@color/mainMenu_btn_text"
            android:drawableStart="@drawable/list"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_exam"
            tools:layout_editor_absoluteX="28dp" />

        <Button
            android:id="@+id/btn_favorites"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle"
            android:text="@string/btn_favorites_text"
            android:textAlignment="center"
            android:textColor="@color/mainMenu_btn_text"
            android:drawableStart="@drawable/bookmark"
            app:layout_constraintTop_toBottomOf="@+id/btn_statistic"
            tools:layout_editor_absoluteX="28dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>